prql-compiler/tests/integration/snapshots/integration__sql@genre_counts.prql.snap
---
source: prql-compiler/tests/integration/main.rs
expression: "let genre_count = (\n    from genres\n    aggregate {a = count name}\n)\n\nfrom genre_count\nfilter a > 0\nselect a = -a\nsort {-a}\n"
input_file: prql-compiler/tests/integration/queries/genre_counts.prql
---
WITH genre_count AS (
  SELECT
    COUNT(name) AS a
  FROM
    genres
)
SELECT
  - a AS a
FROM
  genre_count
WHERE
  a > 0
ORDER BY
  a DESC

