prql-compiler/tests/integration/snapshots/integration__sql@group_all.prql.snap
---
source: prql-compiler/tests/integration/main.rs
expression: "from a=albums\ntake 10\njoin tracks {==album_id]\ngroup [a.album_id, a.title} (aggregate price = ((sum tracks.unit_price)))\nsort album_id\n"
input_file: prql-compiler/tests/integration/queries/group_all.prql
---
WITH table_1 AS (
  SELECT
    album_id,
    title
  FROM
    albums AS a
  LIMIT
    10
)
SELECT
  table_0.album_id,
  table_0.title,
  SUM(tracks.unit_price) AS price
FROM
  table_1 AS table_0
  JOIN tracks ON table_0.album_id = tracks.album_id
GROUP BY
  table_0.album_id,
  table_0.title
ORDER BY
  table_0.album_id

