prql-compiler/tests/integration/snapshots/integration__sql@switch.prql.snap
---
source: prql-compiler/tests/integration/main.rs
expression: "from tracks\nsort milliseconds\nselect display = case [\n    composer != null => composer,\n    genre_id < 17 => 'no composer',\n    true => f'unknown composer'\n]\ntake 10\n"
input_file: prql-compiler/tests/integration/queries/switch.prql
---
WITH table_1 AS (
  SELECT
    CASE
      WHEN composer IS NOT NULL THEN composer
      WHEN genre_id < 17 THEN 'no composer'
      ELSE 'unknown composer'
    END AS display,
    milliseconds
  FROM
    tracks
  ORDER BY
    milliseconds
  LIMIT
    10
)
SELECT
  display
FROM
  table_1 AS table_0
ORDER BY
  milliseconds

