prql-compiler/tests/integration/snapshots/integration__sql_MsSql@cast.prql.snap
---
source: prql-compiler/tests/integration/main.rs
expression: "from tracks\nsort {-bytes}\nselect {\n    name,\n    bin = ((album_id | as REAL) * 99)\n}\ntake 20\n"
input_file: prql-compiler/tests/integration/queries/cast.prql
---
WITH table_0 AS (
  SELECT
    TOP (20) name,
    CAST(album_id AS REAL) * 99 AS bin,
    bytes
  FROM
    tracks
  ORDER BY
    bytes DESC
)
SELECT
  name,
  bin
FROM
  table_0
ORDER BY
  bytes DESC

